--- a/themes/sector_starter/scss/layout/_pre-content.scss
+++ b/themes/sector_starter/scss/layout/_pre-content.scss
@@ -10,7 +10,8 @@
     margin-top: $spacing-and-half;
   }
   .region-pre-content {
-    margin-left: $responsive-layout-gutter;
-    margin-right: $responsive-layout-gutter;
+    width: 100%;
+    padding-left: $responsive-layout-gutter;
+    padding-right: $responsive-layout-gutter;
   }
 }
