--- a/themes/sector_starter/scss/layout/_pre-header.scss
+++ b/themes/sector_starter/scss/layout/_pre-header.scss
@@ -5,7 +5,8 @@
 .pre-header {
   background-color: $white;
   .region-pre-header {
-    margin-left: $responsive-layout-gutter;
-    margin-right: $responsive-layout-gutter;
+    width: 100%;
+    padding-left: $responsive-layout-gutter;
+    padding-right: $responsive-layout-gutter;
   }
 }
