--- a/themes/sector_starter/scss/layout/_pre-hero.scss
+++ b/themes/sector_starter/scss/layout/_pre-hero.scss
@@ -4,7 +4,8 @@
  */
 .pre-hero {
   .region-pre-hero {
-    margin-left: $responsive-layout-gutter;
-    margin-right: $responsive-layout-gutter;
+    width: 100%;
+    padding-left: $responsive-layout-gutter;
+    padding-right: $responsive-layout-gutter;
   }
 }
