--- a/themes/sector_starter/scss/layout/_site.scss
+++ b/themes/sector_starter/scss/layout/_site.scss
@@ -22,6 +22,7 @@
 .site__content {
   padding-left: $responsive-layout-gutter;
   padding-right: $responsive-layout-gutter;
+  width: 100%;
   &.has-sidebar {
     @include respond-to(desktop-and-up) {
       width: percentage(8/12);
@@ -45,6 +46,7 @@
 .site__sidebar {
   padding-left: $responsive-layout-gutter;
   padding-right: $responsive-layout-gutter;
+  width: 100%;
   @include respond-to(desktop-and-up) {
     width: percentage(4/12);
   }
